# contact-energy-nz-api

./: .env.kanuka  .gitignore  README.md  contact-energy-api.service  hacs.json  main.py  pyproject.toml
.kanuka/: audit.jsonl  config.toml
.kanuka/public_keys/: d3097cd6-78b6-4977-a4f9-77d4dfac8df7.pub  d94a1984-6ff3-4164-98fa-d60ec5d6d2a8.pub
.kanuka/secrets/: d3097cd6-78b6-4977-a4f9-77d4dfac8df7.kanuka  d94a1984-6ff3-4164-98fa-d60ec5d6d2a8.kanuka
app/: __init__.py  config.py  main.py  models.py
app/db/: database.py  repositories.py
app/routes/: accounts.py  health.py  sync.py  usage.py
app/services/: cache.py  contact_api.py  ha_notify.py  sync.py  usage_service.py
custom_components/contact_energy/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
docs/plans/: 2026-02-04-contact-energy-api-design.md
homeassistant/: rest_sensor.yaml  template_sensors.yaml
tests/: __init__.py  conftest.py  test_repositories.py  test_routes.py  test_services.py
