[project]
name = "contact-energy-ha-integration"
version = "0.1.0"
description = "FastAPI server exposing Contact Energy usage data for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contact-energy-nz>=0.1.20878578945",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.0.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
contact-energy-server = "app.main:run"
